# context-budget-lab

./: PLAN.md  README.md  RESULTS.md  pyproject.toml
analysis/: abstention_variant.py  frontier.py  judge_rescore.py  make_plots.py  paired_deltas.py  summarize.py  v2_sweep.py
analysis/abstention_variant/: summary.json  summary.md
analysis/frontier/: model_deltas.json  model_deltas.md  summary.json  summary.md
benchmarks/: build_abstention.py  build_haystacks.py  export_workloads.py  run_context_benchmark.py  run_matrix.py
context_budget_lab/: __init__.py  client.py  datasets.py  haystack.py  metrics.py  prompts.py  scoring.py  strategies.py  traces.py
datasets/: README.md  public_ai_policy_toy.jsonl  public_ai_policy_v0.jsonl  public_ai_policy_v2_h2.jsonl  public_ai_policy_v2_h8.jsonl  synthetic_agent_memory_abstain_v2.jsonl  synthetic_agent_memory_abstain_v2_h2.jsonl  synthetic_agent_memory_abstain_v2_h8.jsonl  synthetic_agent_memory_toy.jsonl  synthetic_agent_memory_v0.jsonl  synthetic_agent_memory_v2_h2.jsonl  synthetic_agent_memory_v2_h8.jsonl
exports/: public_ai_policy_v0.jsonl  public_ai_policy_v2_h32.jsonl  synthetic_agent_memory_abstain_v2_h32.jsonl  synthetic_agent_memory_v0.jsonl  synthetic_agent_memory_v2_h32.jsonl
serving/: vllm_modal.py
tests/: test_abstention_suite.py  test_abstention_variant.py  test_cli_smoke.py  test_client.py  test_datasets.py  test_exports.py  test_frontier.py  test_haystack.py  test_judge_rescore.py  test_paired_deltas.py  test_scoring.py  test_strategies.py  test_traces.py  test_v2_sweep.py
(+96 files in other folders)
