[project]
name = "context-budget-lab"
version = "0.1.0"
description = "Local-first context strategy benchmark for agentic and RAG workloads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
